fix css overflow map

--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
  */
 #map {
   width: 100%;
-  height: 100%;
+  height: 600px;
 }
 
 /* 
@@ -335,7 +335,7 @@ body {
 }
 
 @media only screen and (min-width: 300px) {
-  html {
+  #map {
     zoom: 0.85;
   }
 
@@ -345,13 +345,13 @@ body {
 }
 
 @media only screen and (min-width: 769px) {
-  html {
+  #map {
     zoom: 0.9;
   }
 }
 
 @media only screen and (min-width: 900px) {
-  html {
+  #map {
     zoom: 1;
   }
 
